kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  selector:
    app: test-pod
  ports:
  - port: 4000
    targetPort: 80
    nodePort: 30007
